[project]
name = "my-tech-blog-mcp-server"
version = "0.2.0"
description = "MCP server for accessing personal tech blog (jeongil.dev) documentation and experiences"
authors = [
    {name = "Jeong Il", email = "jji042842@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
